# systemdnetes

./: .gitignore  CLAUDE.md  README.md  TODO.md  cabal.project  flake.nix  fly.toml  systemdnetes.cabal
app/: CLAUDE.md  Main.hs
app/Deploy/: Main.hs
deploy/: CLAUDE.md  remote-build.sh
nix-pod-builder/: CLAUDE.md  systemdnetes-nix-pod-builder.cabal
nix-pod-builder/nix/: compose-pod.nix
nix-pod-builder/src/Systemdnetes/: NixPodBuilder.hs
nix-pod-builder/src/Systemdnetes/NixPodBuilder/: Command.hs
nix-pod-builder/test/: Main.hs
nix-pod-builder/test/Systemdnetes/NixPodBuilder/: CommandSpec.hs
nix/modules/: orchestrator.nix  pod.nix  worker.nix
plans/: deploy-fix.md  fix-deployment.md  nixos-oci-images.md
reconciler/: CLAUDE.md  systemdnetes-reconciler.cabal
reconciler/src/Systemdnetes/: Reconciler.hs
reconciler/src/Systemdnetes/Reconciler/: Loop.hs
reconciler/test/: Main.hs
reconciler/test/Systemdnetes/Reconciler/: LoopSpec.hs
scheduler/: CLAUDE.md  systemdnetes-scheduler.cabal
scheduler/src/Systemdnetes/: Scheduler.hs
scheduler/src/Systemdnetes/Scheduler/: Algo.hs  Types.hs
scheduler/test/: Main.hs
scheduler/test/Systemdnetes/Scheduler/: AlgoSpec.hs
server/: CLAUDE.md  systemdnetes-server.cabal
server/app/: Main.hs
src/: CLAUDE.md  Systemdnetes.hs
src/Systemdnetes/: Api.hs  App.hs  Sse.hs
src/Systemdnetes/Deploy/: App.hs  Bootstrap.hs  Cmd.hs  Config.hs  Fly.hs  HttpReq.hs  Nix.hs  Redeploy.hs  Skopeo.hs
src/Systemdnetes/Deploy/Cmd/: Interpreter.hs
src/Systemdnetes/Deploy/HttpReq/: Interpreter.hs
src/Systemdnetes/Domain/: CLAUDE.md  Cluster.hs  Dns.hs  Network.hs  Node.hs  Nspawn.hs  Pod.hs  Reconcile.hs  Resource.hs  WireGuard.hs
src/Systemdnetes/Effects/: CLAUDE.md  DnsRegistry.hs  FileServer.hs  IpAllocator.hs  Log.hs  NodeStore.hs  Ssh.hs  Store.hs  Systemd.hs  WireGuardControl.hs
src/Systemdnetes/Effects/DnsRegistry/: Interpreter.hs
src/Systemdnetes/Effects/FileServer/: Interpreter.hs
src/Systemdnetes/Effects/IpAllocator/: Interpreter.hs
src/Systemdnetes/Effects/Log/: Interpreter.hs
src/Systemdnetes/Effects/NodeStore/: Interpreter.hs
src/Systemdnetes/Effects/Ssh/: Interpreter.hs
src/Systemdnetes/Effects/Store/: Interpreter.hs
src/Systemdnetes/Effects/Systemd/: Interpreter.hs
src/Systemdnetes/Effects/WireGuardControl/: Interpreter.hs
static/: CLAUDE.md  index.html
test/: CLAUDE.md  Main.hs
test/Systemdnetes/: ApiSpec.hs  CLAUDE.md
test/Systemdnetes/Deploy/: BootstrapSpec.hs  CmdSpec.hs  ConfigSpec.hs  HttpReqSpec.hs  RedeploySpec.hs
test/Systemdnetes/Domain/: CLAUDE.md  ClusterSpec.hs  DnsSpec.hs  NetworkSpec.hs  NodeSpec.hs  NspawnSpec.hs  PodSpec.hs  ReconcileSpec.hs  ResourceSpec.hs  WireGuardSpec.hs
test/Systemdnetes/Effects/: CLAUDE.md  DnsRegistrySpec.hs  FileServerSpec.hs  IpAllocatorSpec.hs  LogSpec.hs  NodeStoreSpec.hs  SshSpec.hs  StoreSpec.hs  SystemdSpec.hs  UpdateChainSpec.hs  WireGuardControlSpec.hs
