cabal-version:   3.0
name:            systemdnetes
version:         0.1.0.0
synopsis:        Systemd-style container orchestration
build-type:      Simple

common shared
  default-language: GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall
    -Wcompat
    -O2
    -flate-specialise
    -fspecialise-aggressively
    -fplugin=Polysemy.Plugin
  build-depends:
    , base           >=4.17 && <5
    , polysemy       >=1.9
    , polysemy-plugin

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Systemdnetes
    Systemdnetes.App
    Systemdnetes.Effects.Log
    Systemdnetes.Effects.Log.Interpreter
  build-depends:
    , text
    , time

executable systemdnetes
  import:          shared
  hs-source-dirs:  app
  main-is:         Main.hs
  build-depends:
    , bytestring
    , http-types
    , systemdnetes
    , wai
    , warp

test-suite systemdnetes-test
  import:          shared
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  other-modules:
    Systemdnetes.Effects.LogSpec
  build-depends:
    , hedgehog
    , systemdnetes
    , tasty
    , tasty-hedgehog
    , text
