cabal-version:   3.0
name:            systemdnetes
version:         0.1.0.0
synopsis:        Systemd-style container orchestration
build-type:      Simple

common shared
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    FlexibleContexts
    GADTs
    LambdaCase
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
  ghc-options:
    -Wall
    -Wcompat
    -O2
    -flate-specialise
    -fspecialise-aggressively
    -fplugin=Polysemy.Plugin
  build-depends:
    , base           >=4.17 && <5
    , polysemy       >=1.9
    , polysemy-plugin

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Systemdnetes
    Systemdnetes.Api
    Systemdnetes.App
    Systemdnetes.Domain.Node
    Systemdnetes.Domain.Pod
    Systemdnetes.Effects.Log
    Systemdnetes.Effects.Log.Interpreter
    Systemdnetes.Effects.Store
    Systemdnetes.Effects.Store.Interpreter
    Systemdnetes.Effects.Systemd
    Systemdnetes.Effects.Systemd.Interpreter
  build-depends:
    , aeson
    , bytestring
    , containers
    , http-types
    , stm
    , text
    , time
    , wai

executable systemdnetes
  import:          shared
  hs-source-dirs:  app
  main-is:         Main.hs
  build-depends:
    , containers
    , stm
    , systemdnetes
    , wai
    , warp

test-suite systemdnetes-test
  import:          shared
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Main.hs
  other-modules:
    Systemdnetes.Effects.LogSpec
    Systemdnetes.Effects.StoreSpec
    Systemdnetes.Effects.SystemdSpec
  build-depends:
    , containers
    , hedgehog
    , systemdnetes
    , tasty
    , tasty-hedgehog
    , text
